- add mongodb chat and room model - add ui chatroom - connect room and route

--- a/app/views/home.ejs
+++ b/app/views/home.ejs
@@ -17,7 +17,8 @@
 
             <div style="margin-top: 18px;">
                 <form id="contact" action="/send" method="post">
-                    <input type="text" name="Name" placeholder="Name (optional)" />
+                    <input type="text" name="title" placeholder="Title (optional)" />
+                    <input type="text" name="name" placeholder="Name (optional)" />
                     <input type="email" name="email" placeholder="Email (optional)" />
                     <textarea required spellcheck="false" form="contact" name="message" id="message" placeholder="Message" cols="30" rows="10"></textarea>
 
