save recent chatroom to local storage

--- a/app/views/chatroom.ejs
+++ b/app/views/chatroom.ejs
@@ -54,7 +54,7 @@
     <script src="/js/main.js"></script>
     <script>
         $(function () {
-            app.chat('<%= room.id %>')
+            app.chat('<%= room.id %>', '<%= room.title %>')
         });
     </script>
 </body>
