--- a/public/css/style.css
+++ b/public/css/style.css
@@ -389,3 +389,38 @@ a.logout-btn:focus {
 .chat .chat-history .my-message {
   text-align: initial;
 }
+
+.recent-chat {
+  background-color: #444753;
+  margin-bottom: 10px;
+  color: white;
+  text-align: center;
+}
+
+.room-list {
+  padding: 10px 30px 20px;
+  border-bottom: 2px solid white;
+  overflow-y: scroll;
+  max-height: 580px;
+}
+
+.room-list .room-item {
+  color: white;
+  padding: 12px 14px;
+  line-height: 26px;
+  font-size: 20px;
+  border-radius: 7px;
+  margin-bottom: 10px;
+  width: 90%;
+  position: relative;
+  cursor: pointer;
+  text-align: center;
+}
+
+.room-list .room-item {
+  background: #86BB71;
+}
+
+.room-list a {
+  text-decoration: none;
+}
