--- a/app/views/home.ejs
+++ b/app/views/home.ejs
@@ -42,7 +42,7 @@
             </div>
         </div> <!-- end form -->
     </div> <!-- end login container -->
-    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
     <script src="/js/main.js"></script>
     <script>
         $(function () {
