--- a/app/views/chatroom.ejs
+++ b/app/views/chatroom.ejs
@@ -24,21 +24,6 @@
 
             <div class="chat-history">
                 <ul>
-                    <% for (var i = 0; i < room.chats.length; i++) { %>
-                        <li>
-                            <div class="message-data">
-                                <span class="message-data-name">
-                                    <%= room.chats[i].username %>
-                                </span>
-                                <span class="message-data-time">
-                                    <%= new Date(room.chats[i].date).toLocaleString() %>
-                                </span>
-                            </div>
-                            <div class="message my-message" dir="auto">
-                                <%= room.chats[i].content %>
-                            </div>
-                        </li>
-                    <% } %>
                 </ul>
             </div> <!-- end chat-history -->
 
@@ -55,6 +40,8 @@
     <script>
         $(function () {
             app.chat('<%= room.id %>', '<%= room.title %>')
+            const data = <%- chats %>
+            data.forEach(c => app.utils.addMessage(c))
         });
     </script>
 </body>
