--- a/app/views/dashboard.ejs
+++ b/app/views/dashboard.ejs
@@ -3,6 +3,15 @@
   <head>
     <meta charset="UTF-8">
     <title>Chat IO</title>
+    <meta property="og:site_name" content="Chat to Ilhamsyahids">
+    <meta property="og:title" content="Chat to Ilhamsyahids">
+    <meta property="og:url" content="http://chat.ilhamsyahids.me/">
+    <meta name="description" content="Chat directly to Ilhamsyahids.">
+    <meta name="og:description" content="Chat directly to Ilhamsyahids.">
+    <meta name="twitter:title" content="Chat to Ilhamsyahids">
+    <meta name="twitter:description" content="Chat directly to Ilhamsyahids.">
+    <link rel="canonical" href="http://chat.ilhamsyahids.me/">
+
     <link rel="stylesheet" href="/css/style.css">
     <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
   </head>
