--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -4,6 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <title>Chat IO</title>
+  <meta property="og:site_name" content="Login for Ilhamsyahids">
+  <meta property="og:title" content="Login for Ilhamsyahids">
+  <meta property="og:url" content="http://chat.ilhamsyahids.me/login">
+  <meta name="description" content="Login for Ilhamsyahids.">
+  <meta name="og:description" content="Login for Ilhamsyahids.">
+  <meta name="twitter:title" content="Login for Ilhamsyahids">
+  <meta name="twitter:description" content="Login for Ilhamsyahids.">
+  <link rel="canonical" href="http://chat.ilhamsyahids.me/login">
+
   <link rel="stylesheet" href="/css/style.css">
 </head>
 
