--- a/app/views/home.ejs
+++ b/app/views/home.ejs
@@ -4,6 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Chat ilhamsyahids</title>
+    <meta property="og:site_name" content="Chat to Ilhamsyahids">
+    <meta property="og:title" content="Chat to Ilhamsyahids">
+    <meta property="og:url" content="http://chat.ilhamsyahids.me/">
+    <meta name="description" content="Chat directly to Ilhamsyahids.">
+    <meta name="og:description" content="Chat directly to Ilhamsyahids.">
+    <meta name="twitter:title" content="Chat to Ilhamsyahids">
+    <meta name="twitter:description" content="Chat directly to Ilhamsyahids.">
+    <link rel="canonical" href="http://chat.ilhamsyahids.me/">
+
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
